# tauri-application

./: package-lock.json  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: .env.example  Cargo.toml
src-tauri/migrations/: 20240505021537_create-main-tables.down.sql  20240505021537_create-main-tables.up.sql
src-tauri/src/: main.rs
src/pages/: Home.jsx
src/pages/building/: CreateBuilding.jsx
src/pages/manager/: DashboardManager.jsx  LoginManager.jsx
src/utils/: index.js  store.js
