[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros" ] } 
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
